[package]
name = "cargo-helper"
version = "1.1.5"
description = "A Gui for Cargo with support for vexide"
license = "CC-BY-4.0"
repository = "https://github.com/Nashvill375/cargo-helper"
edition = "2024"

[dependencies]
eframe = "0.34.1"
egui_alignments = "0.3.8"
egui_extras = { version = "0.34.1", features = ["image", "svg"] }

